# RLA_DM_optimization

./: .gitignore  CMakeLists.txt  README.md  config.xml  config_dmo_ps.xml  config_dmo_ps1.xml  config_dmo_ps2.xml  config_ds2.xml  config_ds_firstname.xml  config_ds_singlestage.xml  config_ds_twostage.xml  config_ds_twostagev1.xml  config_ds_twostagev2.xml  config_nc_twostagev2.xml  config_psudo_twostagev2.xml  tesr.output  test  test.cpp
src/: Common.h  MainRLA.cc  RLA_CL.cc  RLA_CL.h  SortInsertion.cc  SortInsertion.h  SortMSD.cc  SortMSD.h  cluster.cc  cluster.h  double_metaphone.cc  double_metaphone.h  doublemetaphone_blocking.cpp  doublemetaphone_blocking.h  edit_distance.cpp  edit_distance.h  multi_attribute_blocking.cpp  multi_attribute_blocking.h  multi_blocking_scheme.cpp  multi_blocking_scheme.h  performance.cc  performance.h  prefix_blocking.cpp  prefix_blocking.h  soundex.cpp  soundex.h  soundex_blocking.cpp  soundex_blocking.h  test_edit_distance.cpp  union_find.cpp  union_find.h  util.cc  util.h
tests/: test_soundex.cpp
